deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bharatmart
  labels:
    name: bharatmart
    environment: production
